--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Aditya C</title>
+</head>
+<body>
+  <h1>Hello! I'm Aditya.</h1>
+  <p>My personal webpage is coming soon.</p>
+</body>
+</html>
 
